# bug_crowd_client

./: .travis.yml  AUTHORS  CODEOWNERS  ChangeLog  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
bug_crowd/: client.py  test.py
