[metadata]
name = bug-crowd-api-client
summary = Python implementation of a Bugcrowd api client.
description = For information on usage see https://github.com/asecurityteam/bug_crowd_client
license = MIT
author = Atlassian Security Team
author_email = security@atlassian.com
url = https://github.com/asecurityteam/bug_crowd_client
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        License :: OSI Approved :: MIT License

[files]
packages =
    bug_crowd

[bdist_wheel]
universal=1
